WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158694
Modern IDB: IDBOpenDBRequest objects leak
https://bugs.webkit.org/show_bug.cgi?id=158694
Summary
Modern IDB: IDBOpenDBRequest objects leak
Brady Eidson
Reported
2016-06-13 09:37:50 PDT
Modern IDB: IDBOpenDBRequest objects leak I traced through the various refs/derefs of a particular opendbrequest and noticed it was left hanging with a ref count of 1. The ref that never gets cleared out is the m_openDBRequestMap of IDBConnectionProxy. The only time anything is ever cleared from that map is when a worker thread is torn down, but it never gets anything removed under main thread use.
Attachments
Patch v1
(1.51 KB, patch)
2016-06-13 09:46 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-06-13 09:46:26 PDT
Created
attachment 281178
[details]
Patch v1
WebKit Commit Bot
Comment 2
2016-06-13 10:31:14 PDT
Comment on
attachment 281178
[details]
Patch v1 Clearing flags on attachment: 281178 Committed
r201995
: <
http://trac.webkit.org/changeset/201995
>
WebKit Commit Bot
Comment 3
2016-06-13 10:31:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug