Modern IDB: IDBOpenDBRequest objects leak. https://bugs.webkit.org/show_bug.cgi?id=158694

Reviewed by Alex Christensen.

No new tests (Currently have no testing strategy for guaranteeing lifetime of WebCore DOM objects)

* Modules/indexeddb/client/IDBConnectionProxy.cpp:
(WebCore::IDBClient::IDBConnectionProxy::completeOpenDBRequest): At this point we never need the
    request again, so remove it from the map.


Canonical link: https://commits.webkit.org/176774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201995 268f45cc-cd09-0410-ab3c-d52691b4dbfc